--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <div class="head`">
             <div class="image"></div>
         </div>
-        <div class="badge"></div>
+        <div class="badge">
+            <i class="fa-solid fa-play"></i>
+            <i class="fa-brands fa-bootstrap"></i>
+            <i class="fa-solid fa-gem"></i>
+        </div>
         <div class="container">
             <div class="header">
                 <p class="bold">Nani0101!!!</p>
