--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;1,100&family=Nunito+Sans:opsz,wght@6..12,200&family=Oswald:wght@200;300;600&family=Poppins:ital,wght@0,100;0,300;0,600;0,800;1,100&family=Roboto+Mono:ital,wght@0,100;1,700&display=swap" rel="stylesheet">
     <link
     href="/your-path-to-fontawesome/css/fontawesome.css"
     rel="stylesheet"
@@ -22,8 +26,12 @@
 </head>
 <body>
     <div class="card">
-        <div class="head`">
-            <div class="image"></div>
+        <div class="bg-profile">
+            <div class="img-profile">
+                <img src="public/photo-profile.png" alt="">
+                <div class="circle-green"></div>
+                <div class="circle-white"></div>
+            </div>
         </div>
         <div class="badge">
             <i class="fa-solid fa-play"></i>
@@ -32,20 +40,21 @@
         </div>
         <div class="container">
             <div class="header">
-                <p class="bold">Nani0101!!!</p>
+                <h3>Nani0101!!!</h3>
                 <p class="semi-bold">nani</p>
                 <p class="light">lev</p>    
             </div>
             <div class="center-text">
-                 <p>⭐ The Chapter is over. the books not Done </p>
+                 <p class="light">⭐ The Chapter is over. the books not Done </p>
+                 <hr>
                  <!-- Kasih hr atau div border bottom -->
             </div>
             <div class="about">
-                <b class="semi-bold">About Me</b>
-                <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, quae?" ⭐</p>    
+                <p class="semi-bold">About Me</p>
+                <p class="light">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, quae?" ⭐</p>    
             </div>
             <div class="discord-member">
-                <b class="semi-bold">DISCORD MEMBER SINCE</b>
+                <p class="semi-bold">DISCORD MEMBER SINCE</p>
                 <p class="light">
                     <i class="fa-brands fa-discord"></i> Aug 1, 2020</p>
             </div>
