--- a/index.html
+++ b/index.html
@@ -1,102 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;1,100&family=Nunito+Sans:opsz,wght@6..12,200&family=Oswald:wght@200;300;600&family=Poppins:ital,wght@0,100;0,300;0,600;0,800;1,100&family=Roboto+Mono:ital,wght@0,100;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="/your-path-to-fontawesome/css/fontawesome.css"
-    rel="stylesheet"
-  />
-  <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
-  <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;1,100&family=Nunito+Sans:opsz,wght@6..12,200&family=Oswald:wght@200;300;600&family=Poppins:ital,wght@0,100;0,300;0,600;0,800;1,100&family=Roboto+Mono:ital,wght@0,100;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="/your-path-to-fontawesome/css/fontawesome.css"
+      rel="stylesheet"
+    />
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
 
-  <!-- script feather icons -->
-  <script src="https://unpkg.com/feather-icons"></script>
+    <!-- script feather icons -->
+    <script src="https://unpkg.com/feather-icons"></script>
 
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-    
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
     <div class="card">
-        <div class="bg-profile">
-            <div class="img-profile">
-                <img src="public/photo-profile.png" alt="">
-                <div class="circle-green"></div>
-                <div class="circle-white"></div>
-            </div>
+      <div class="bg-profile">
+        <div class="img-profile">
+          <img src="public/photo-profile.png" alt="" />
+          <div class="circle-green"></div>
+          <div class="circle-white"></div>
         </div>
-        <div class="badge">
-            <i class="fa-solid fa-play"></i>
-            <i class="fa-brands fa-bootstrap"></i>
-            <i class="fa-solid fa-gem"></i>
+      </div>
+      <div class="badge">
+        <i class="fa-solid fa-play"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-solid fa-gem"></i>
+      </div>
+      <div class="container">
+        <div class="header">
+          <h3>Nani0101!!!</h3>
+          <p class="semi-bold">nani</p>
+          <p class="light">lev</p>
         </div>
-        <div class="container">
-            <div class="header">
-                <h3>Nani0101!!!</h3>
-                <p class="semi-bold">nani</p>
-                <p class="light">lev</p>    
-            </div>
-            <div class="center-text">
-                 <p class="light">⭐ The Chapter is over. the books not Done </p>
-                 <hr>
-                 <!-- Kasih hr atau div border bottom -->
-            </div>
-            <div class="about">
-                <p class="semi-bold">About Me</p>
-                <p class="light">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, quae?" ⭐</p>    
-            </div>
-            <div class="discord-member">
-                <p class="semi-bold">DISCORD MEMBER SINCE</p>
-                <p class="light">
-                    <i class="fa-brands fa-discord"></i> Aug 1, 2020</p>
-            </div>
-            <div class="spotify-card">
-                <b>LISTENING TO SPOTIFY</b>
-                <i class="fa-brands fa-spotify"></i>
-                <div class="img-text">
-                    <img src="" alt="">
-                    <div class="description">
-                        <b>Am I Dreaming</b>
-                        <p class="light">
-                            by Metro Booming, ASAP Rocky.
-                        </p>
-                        <p>Rossie</p>
-                        <p>on METRO BOOMING PRESENTS</p>
-                    </div>
-                    <div class="song-time">
-                        <input type="range" name="" id="" class="range">
-                        <p class="current">2:00</p>
-                        <p class="time">4:16</p>
-                    </div>
-                </div>
-            </div>
-            <button>
-        <i class="fa-brands fa-spotify"></i>
-            Play On Spotify
-            </button>
-            <button><i class="fa-solid fa-user"></i></button>
-            <footer>
-                <b>Note</b>
-                <p class="light">click to add note</p>
-            </footer>
+        <div class="center-text">
+          <p class="light">⭐ The Chapter is over. the books not Done</p>
+          <hr />
+          <!-- Kasih hr atau div border bottom -->
         </div>
-        
+        <div class="about">
+          <p class="semi-bold">About Me</p>
+          <p class="light">
+            "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus,
+            quae?" ⭐
+          </p>
+        </div>
+        <div class="discord-member">
+          <p class="semi-bold">DISCORD MEMBER SINCE</p>
+          <p class="light"><i class="fa-brands fa-discord"></i> Aug 1, 2020</p>
+        </div>
+        <div class="spotify-card">
+          <p class="semi-bold">LISTENING TO SPOTIFY</p>
+          <i class="fa-brands fa-spotify"></i>
+          <div class="img-text">
+            <img src="public/img-song.png" alt="" />
+            <div class="description">
+              <b>Am I Dreaming</b>
+              <p class="light">by Metro Booming, ASAP Rocky.</p>
+              <p>Rossie</p>
+              <p>on METRO BOOMING PRESENTS</p>
+            </div>
+          </div>
+          <div class="song-time">
+            <input type="range" name="" id="" class="range" />
+            <p class="current">2:00</p>
+            <p class="time">4:16</p>
+          </div>
+        </div>
+        <button class="btn-spotify">
+          <i class="fa-brands fa-spotify"></i>
+          Play On Spotify
+        </button>
+        <button class="btn-user"><i class="fa-solid fa-user"></i></button>
+        <footer>
+          <b>Note</b>
+          <p class="light">click to add note</p>
+        </footer>
+      </div>
     </div>
-
-
 
     <script
       src="https://kit.fontawesome.com/45e5dedfd5.js"
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
