fix: btn spotift btn-user

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       </div>
       <div class="container">
         <div class="header">
-          <h3>Nani0101!!!</h3>
-          <p class="semi-bold">nani</p>
-          <p class="light">lev</p>
+          <h3>Naninani</h3>
+          <p class="semi-bold">nani089</p>
+          <p class="light">Ningen</p>
         </div>
         <div class="center-text">
-          <p class="light">⭐ The Chapter is over. the books not Done</p>
+          <p class="light">⭐ FULLSTACK DEV (soon)</p>
           <hr />
           <!-- Kasih hr atau div border bottom -->
         </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="discord-member">
           <p class="semi-bold">DISCORD MEMBER SINCE</p>
-          <p class="light"><i class="fa-brands fa-discord"></i> Aug 1, 2020</p>
+          <p class="light"><i class="fa-brands fa-discord"></i> Sep 3, 2020</p>
         </div>
         <div class="spotify-card">
           <p class="semi-bold">LISTENING TO SPOTIFY</p>
@@ -85,7 +85,7 @@
         <button class="btn-user"><i class="fa-solid fa-user"></i></button>
         <footer>
           <b>Note</b>
-          <p class="light">click to add note</p>
+          <input type="text" class="light" placeholder="click to add note"></input>
         </footer>
       </div>
     </div>
