fix: about me, description and song

--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
           <p class="light">Ningen</p>
         </div>
         <div class="center-text">
-          <p class="light">⭐ FULLSTACK DEV (soon)</p>
+          <p class="light">⭐ FULLSTACK DEV (soon) , cybersecurity (soon). Actually, I am  student hehe :3</p>
           <hr />
           <!-- Kasih hr atau div border bottom -->
         </div>
         <div class="about">
           <p class="semi-bold">About Me</p>
           <p class="light">
-            "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus,
-            quae?" ⭐
+            Goal is Financial Freedom
           </p>
         </div>
         <div class="discord-member">
@@ -66,16 +65,14 @@
           <div class="img-text">
             <img src="public/img-song.png" alt="" />
             <div class="description">
-              <b>Am I Dreaming</b>
-              <p class="light">by Metro Booming, ASAP Rocky.</p>
-              <p>Rossie</p>
-              <p>on METRO BOOMING PRESENTS</p>
+              <b>Waiting For The Rain</b>
+              <p class="light">by Sakamoto Maaya</p>
             </div>
           </div>
           <div class="song-time">
             <input type="range" name="" id="" class="range" />
             <p class="current">2:00</p>
-            <p class="time">4:16</p>
+            <p class="time">5:13</p>
           </div>
         </div>
         <button class="btn-spotify">
