--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
           <div class="img-text">
             <img src="public/img-song.png" alt="" />
             <div class="description">
-              <b>Waiting For The Rain</b>
+              <a href="https://www.youtube.com/watch?v=ZNyuwT13fz4" target="_blank" class="semi-bold">Waiting For The Rain</a>
               <p class="light">by Sakamoto Maaya</p>
+              <div class="play-song">
+                <i class="fa-solid fa-play back"></i>
+                <i class="fa-solid fa-pause"></i>
+                <i class="fa-solid fa-play next"></i>
+              </div>
             </div>
           </div>
           <div class="song-time">
